catalog button hidden temporarily

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
       <ul>
-        <li style="background-color: blueviolet;" onclick="getGames()">Каталог</li>
+        <!-- <li style="background-color: blueviolet;" onclick="getGames()">Каталог</li> -->
         <li><a href="/horror">Horror</a></li>
         <li><a href="/indie">Indie</a></li>
         <li><a href="/shooter">Shooter</a></li>
@@ -145,7 +145,7 @@
     </main>
     <footer>
       <img src="./img/logo.png">
-      <p>© 2023-2023 MegaGames</p>
+      <p>© 2023-2024 MegaGames</p>
     </footer>
     <div class="block-background" style="display: none"></div>
     <script type="text/javascript" src="./js/main.js"></script>
